fix resource domains and rewrite modes
